i started working on home page

--- a/Flask-Routing-Lab/templates/home.html
+++ b/Flask-Routing-Lab/templates/home.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <title>Neal.com</title>
+    <img src="nnng.jpeg"width="400" height="400">
 </head>
 <body>
-
+<p1>shop worldwide easily.</p1>
+<p1 style="color:darkgreen;">shop worldwide easily.</p1>
+<p1 style="font-size:15px">shop worldwide easily.</p1>
+<img src="Nike-x-Travis.jpeg"width="400" height="400">
 </body>
 </html>
