--- a/Flask-Routing-Lab/templates/cart.html
+++ b/Flask-Routing-Lab/templates/cart.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Cart</title>
+    <style>
+    #image {
+  height: 400px;
+  width: 500px;
+  background-color: powderblue;
+    }
+</style>
 </head>
 <body>
-
+<img id="image" src="static/dior.jpeg" alt="Dior Jordan 1's">
+<button>Buy</button>
 </body>
 </html>
