--- a/Flask-Routing-Lab/templates/product.html
+++ b/Flask-Routing-Lab/templates/product.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Product</title>
+    <style>
+    #image {
+  height: 400px;
+  width: 500px;
+  background-color: powderblue;
+    }
+</style>
 </head>
 <body>
-
+ <img id="image" src="static/dior.jpeg" alt="Dior Jordan 1's">
+ <h3>Dior Jordan 1's</h3>
+ <h3>price 100000000$</h3>
 </body>
 </html>
